--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+    <!-- MENU FIXO -->
+    <nav class="navbar">
+        <h2 class="logo">Vida Saudável</h2>
+        <ul>
+            <li><a href="index.html">Início</a></li>
+            <li><a href="saude-fisica.html">Saúde Física</a></li>
+            <li><a href="autocuidado.html">Autocuidado</a></li>
+            <li><a href="bem-estar.html">Bem-estar</a></li>
+        </ul>
+    </nav>
+
     <header>
         <h1>Vida Saudável</h1>
         <p>Saúde, bem-estar e autocuidado para o seu dia a dia</p>
@@ -39,12 +51,14 @@
             <span class="estrela" data-value="4">★</span>
             <span class="estrela" data-value="5">★</span>
         </div>
+
         <p id="resultadoAvaliacao"></p>
 
         <form id="feedbackForm">
             <textarea id="feedback" placeholder="Deixe um comentário..." required></textarea>
             <button type="submit">Enviar Feedback</button>
         </form>
+
         <p id="mensagemFeedback"></p>
     </section>
 
