--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 </head>
 <body>
 
-    <!-- MENU FIXO -->
-    <nav class="navbar">
-        <h2 class="logo">Vida Saudável</h2>
-        <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="saude-fisica.html">Saúde Física</a></li>
-            <li><a href="autocuidado.html">Autocuidado</a></li>
-            <li><a href="bem-estar.html">Bem-estar</a></li>
-        </ul>
-    </nav>
+<!-- MENU FIXO -->
+<nav class="navbar">
+    <h2 class="logo">Vida Saudável</h2>
+    <ul>
+        <li><a href="#inicio">Início</a></li>
+        <li><a href="#saude-fisica">Saúde Física</a></li>
+        <li><a href="#autocuidado">Autocuidado</a></li>
+        <li><a href="#bem-estar">Bem-estar</a></li>
+    </ul>
+</nav>
 
+<!-- ========================= INÍCIO ========================= -->
+
+<section id="inicio">
     <header>
         <h1>Vida Saudável</h1>
         <p>Saúde, bem-estar e autocuidado para o seu dia a dia</p>
@@ -44,6 +47,7 @@
 
     <section class="avaliacao-section">
         <h2>Avalie nosso conteúdo</h2>
+
         <div class="estrelas">
             <span class="estrela" data-value="1">★</span>
             <span class="estrela" data-value="2">★</span>
@@ -61,11 +65,151 @@
 
         <p id="mensagemFeedback"></p>
     </section>
+</section>
 
-    <footer>
-        <p>© 2025 Vida Saudável — Bem-estar para todos</p>
-    </footer>
+<!-- ========================= SAÚDE FÍSICA ========================= -->
 
-    <script src="script.js"></script>
+<section id="saude-fisica">
+    <header>
+        <h1>Saúde Física</h1>
+        <p>Cuide do seu corpo com hábitos simples e poderosos.</p>
+    </header>
+
+    <section>
+        <h2>Introdução</h2>
+        <p>A saúde física é essencial para uma vida equilibrada. Ela envolve
+           alimentação, movimento e prevenção. Com pequenas ações diárias, você
+           fortalece o corpo e melhora sua disposição.</p>
+    </section>
+
+    <section>
+        <h2>Dicas Práticas</h2>
+        <ul style="list-style:none; padding:0;">
+            <li>• Faça exercícios leves diariamente.</li>
+            <li>• Tenha uma boa noite de sono.</li>
+            <li>• Beba água regularmente.</li>
+            <li>• Prefira alimentos naturais.</li>
+            <li>• Alongue-se ao acordar.</li>
+        </ul>
+    </section>
+
+    <div class="cards-container">
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1594737625785-c0b3c5dc69a5">
+            <h3>Treino Leve</h3>
+            <p>20 minutos por dia já ajudam seu corpo a se fortalecer.</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1544367567-0f2fcb009e0b">
+            <h3>Alimentação Natural</h3>
+            <p>Evite processados e prefira frutas, legumes e proteínas limpas.</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1556740738-b6a63e27c4df">
+            <h3>Hidratação</h3>
+            <p>Seu corpo precisa de água para funcionar em equilíbrio.</p>
+        </div>
+    </div>
+</section>
+
+<!-- ========================= AUTOCUIDADO ========================= -->
+
+<section id="autocuidado">
+    <header>
+        <h1>Autocuidado</h1>
+        <p>Práticas que fortalecem sua mente e corpo.</p>
+    </header>
+
+    <section>
+        <h2>Introdução</h2>
+        <p>Autocuidar-se é essencial para manter saúde emocional, reduzir estresse
+           e viver com mais leveza.</p>
+    </section>
+
+    <section>
+        <h2>Dicas Práticas</h2>
+        <ul style="list-style:none; padding:0;">
+            <li>• Tire 10 minutos para respirar profundamente.</li>
+            <li>• Tenha uma rotina leve antes de dormir.</li>
+            <li>• Reduza o uso de telas à noite.</li>
+            <li>• Faça algo que ama diariamente.</li>
+            <li>• Pratique gratidão.</li>
+        </ul>
+    </section>
+
+    <div class="cards-container">
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1519181245277-cffeb31da2a5">
+            <h3>Relaxamento</h3>
+            <p>Reserve momentos para respirar e se acalmar.</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1506126613408-eca07ce68773">
+            <h3>Rotina Noturna</h3>
+            <p>Ambiente silencioso e sem telas melhora o sono.</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d">
+            <h3>Hobbies</h3>
+            <p>Pratique atividades que tragam leveza e prazer.</p>
+        </div>
+    </div>
+</section>
+
+<!-- ========================= BEM-ESTAR ========================= -->
+
+<section id="bem-estar">
+    <header>
+        <h1>Bem-estar Geral</h1>
+        <p>Equilíbrio entre corpo, mente e ambiente.</p>
+    </header>
+
+    <section>
+        <h2>Introdução</h2>
+        <p>O bem-estar geral envolve equilíbrio emocional, físico e ambiental.
+           Quando esses pilares estão organizados, a vida se torna mais leve.</p>
+    </section>
+
+    <section>
+        <h2>Dicas Práticas</h2>
+        <ul style="list-style:none; padding:0;">
+            <li>• Dedique-se ao descanso.</li>
+            <li>• Conecte-se com pessoas positivas.</li>
+            <li>• Tenha metas simples.</li>
+            <li>• Organize seu ambiente.</li>
+            <li>• Pratique mindfulness.</li>
+        </ul>
+    </section>
+
+    <div class="cards-container">
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1502082553048-f009c37129b9">
+            <h3>Natureza</h3>
+            <p>Estar ao ar livre reduz ansiedade e aumenta bem-estar.</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b">
+            <h3>Organização</h3>
+            <p>Ambientes limpos melhoram foco e humor.</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1517849845537-4d257902454a">
+            <h3>Conexões</h3>
+            <p>Pessoas positivas fortalecem sua saúde mental.</p>
+        </div>
+    </div>
+</section>
+
+<footer>
+    <p>© 2025 Vida Saudável — Bem-estar para todos</p>
+</footer>
+
+<script src="script.js"></script>
 </body>
 </html>
